# codemuse-backend

./: .gitignore  ARCHITECTURE_HANDOVER.md  CodeMuse_Design_Document.md  FRONTEND_API_ENDPOINTS.md  FRONTEND_API_UPDATE.md  FRONTEND_SETUP.md  RAG_PERFORMANCE_OPTIMIZATION.md  README.md  REPOSITORY_STRUCTURE.md  SUPERVISOR_DEMO_GUIDE.md  auto_link_test.txt  backend_test.txt  codemuse.draft.md  codemuse_response.txt  codemuse_result.txt  docker-compose.yml  enhanced_link_test.txt  env.example  final_link_test.txt  final_test_1.txt  final_test_2.txt  flow.md  improved_test_result.txt  link_test.txt  pyproject.toml  real_link_test.txt  requirements.txt  response.txt  test_90_percent_1.txt  test_90_percent_2.txt  test_commit.txt  test_hook.txt  test_result.txt  vizier_dependency_unrelated_files.md  vizier_leader_follower_files.md
archive/unused/root/: run_demo_api.py  run_document_generator.py
archive/unused/src/: main.py
docker/nginx/: nginx.conf
docker/services/: DocumentGenerator.Dockerfile  LLMChat.Dockerfile  RAGEngine.Dockerfile  WebInterface.Dockerfile  WorkflowOrchestrator.Dockerfile
generated_docs/: project_overview.md  project_summary.md  vizier_dependency_relationships.md  vocabulary.json
generated_docs/rule_analyzer/: __init__.md  exceptions.md  json_processor.md  models.md  parser.md
generated_docs/rule_analyzer/analyzers/: __init__.md  advanced_analyzer.md  condition_analyzer.md  issue_detector.md  logic_flow.md  metrics_generator.md  rule_analyzer.md
generated_docs/rule_analyzer/formatters/: __init__.md  streaming_formatter.md  text_formatter.md
generated_docs/rule_analyzer/shared/: __init__.md  logging.md
generated_docs/rule_analyzer/streaming/: __init__.md  stream_generator.md  stream_manager.md  stream_models.md
generated_docs/vizier(sample)/fe/: babel.config.md  playwright.config.md  vite.config.md  vitest.config.md  vue.config.md
generated_docs/vizier(sample)/vizier-fe-all-develop/: babel.config.md  playwright.config.md  vite.config.md  vitest.config.md  vue.config.md
logs/: gen_result.json
rag_storage/chroma_db/29d84103-d4df-4e9f-935b-39f3677dc8b9/: index_metadata.pickle
rag_storage/chroma_db/3c6c3144-bcd1-471d-a0a0-f74f93e920e8/: index_metadata.pickle
rag_storage/chroma_db/5b5e745c-222b-4331-9a17-6715da649636/: index_metadata.pickle
rag_storage/chroma_db/7f97a7aa-8f05-4ea3-883f-473f5bfa8226/: index_metadata.pickle
sample_code/rule_analyzer/: __init__.py  exceptions.py  json_processor.py  models.py  parser.py
sample_code/rule_analyzer/analyzers/: __init__.py  advanced_analyzer.py  condition_analyzer.py  issue_detector.py  logic_flow.py  metrics_generator.py  rule_analyzer.py
sample_code/rule_analyzer/formatters/: __init__.py  streaming_formatter.py  text_formatter.py
sample_code/rule_analyzer/shared/: __init__.py  logging.py
sample_code/rule_analyzer/streaming/: __init__.py  stream_generator.py  stream_manager.py  stream_models.py
sample_code/vizier(sample)/be/: Dockerfile  Dockerfile.dev  build.gradle
sample_code/vizier(sample)/fe/: deployment.yaml  (+3 more)
scripts/setup/: start_services.sh  stop_services.sh  test_services.py
src/chunker_document_generator/: app.py
src/llm_chat_service/: app.py
src/rag_engine/: app.py
src/workflow/: app.py
~/.cloudflared/: config.yml
(+3946 files in other folders)
